tablet version almost done/just header and footer left

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1 class="hero-banner__title">The Bees Knees</h1>
     </section>
     <main class="main-content">
-        <h2>About the Musicians</h2>
+        <h2 class="main-content__title">About the Musicians</h2>
         <img
         class="main-content__photo"
         src="./assets/images/band.jpg"
@@ -37,11 +37,13 @@
     </section>
     <section class="main-content__description">
         <h3 class="main-content__description--title">The Bees Knees</h3>
+        <div class="main-content__description-container">
         <p class="main-content__description--paragraph">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts (The Elephant In The Room, One Trick Pony, The Cat's Meow), Adams was confident the band could succeed even further, pushing them to sign with Magenta Records.</p>
         <p class="main-content__description--paragraph">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band's original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released in late 2021.</p>
+        </div>
     </section>
     <section class="main-content__gallery">
-        <h2>Photo Gallery</h2>
+        <h2 class="main-content__gallery--title">Photo Gallery</h2>
         <div class="gallery-section">
             <img
             class="gallery-section__photo"
@@ -96,6 +98,7 @@
                 src="assets/icons/Icon-twitter.svg"
                 alt="twitter">
             </section>
+            <!-- <div class="site-footer__contact-container"> -->
             <section class="site-footer__contact">
                 <p class="site-footer__contact--name-position">Cam Adams <br> The Bees Knees Management</p>
                 <p class="site-footer__contact--destination">503 Broadway Penthouse, <br> New York, NY 10012, USA</p>
@@ -117,6 +120,7 @@
                 alt="logo">
                 <p class="site-footer__bottom--text">Copyright The Bees Knees © 2021 All Rights Reserved</p>
             </section>
+            <!-- </div> -->
         </div>
     </footer>
 </body>
