tablet footer aligned

--- a/index.html
+++ b/index.html
@@ -98,29 +98,29 @@
                 src="assets/icons/Icon-twitter.svg"
                 alt="twitter">
             </section>
-            <!-- <div class="site-footer__contact-container"> -->
-            <section class="site-footer__contact">
-                <p class="site-footer__contact--name-position">Cam Adams <br> The Bees Knees Management</p>
-                <p class="site-footer__contact--destination">503 Broadway Penthouse, <br> New York, NY 10012, USA</p>
-                <p class="site-footer__contact--email">info@thebeesknees.com</p>
+            <section class="site-footer__contact-container">
+                <div class="site-footer__contact">
+                    <p class="site-footer__contact--name-position">Cam Adams <br> The Bees Knees Management</p>
+                    <p class="site-footer__contact--destination">503 Broadway Penthouse, <br> New York, NY 10012, USA</p>
+                    <p class="site-footer__contact--email">info@thebeesknees.com</p>
+                </div>
+                <div class="site-footer__contact">
+                    <p class="site-footer__contact--name-position">Pearl Gregg <br> Limitless Artist Group</p>
+                    <p class="site-footer__contact--destination">Booking Agent for <br> US / South America / Japan</p>
+                    <p class="site-footer__contact--email">pearl.gregg@limitlessag.com</p>
+                </div>
+                <div class="site-footer__contact">
+                    <p class="site-footer__contact--name-position">Carson Whyte <br> ARCH Entertainment</p>
+                    <p class="site-footer__contact--destination">Booking Agent for <br> UK / EU / AU</p>
+                    <p class="site-footer__contact--email">cwhyte@archentertainment.com</p>
+                </div>
             </section>
-            <section class="site-footer__contact">
-                <p class="site-footer__contact--name-position">Pearl Gregg <br> Limitless Artist Group</p>
-                <p class="site-footer__contact--destination">Booking Agent for <br> US / South America / Japan</p>
-                <p class="site-footer__contact--email">pearl.gregg@limitlessag.com</p>
-            </section>
-            <section class="site-footer__contact">
-                <p class="site-footer__contact--name-position">Carson Whyte <br> ARCH Entertainment</p>
-                <p class="site-footer__contact--destination">Booking Agent for <br> UK / EU / AU</p>
-                <p class="site-footer__contact--email">cwhyte@archentertainment.com</p>
-            </section>
-            <section class="site-footer__bottom">
-                <img  class="site-footer__bottom--logo"
-                src="assets/logos/Logo-bandsite.svg"
-                alt="logo">
-                <p class="site-footer__bottom--text">Copyright The Bees Knees © 2021 All Rights Reserved</p>
-            </section>
-            <!-- </div> -->
+                <section class="site-footer__bottom">
+                    <img  class="site-footer__bottom--logo"
+                    src="assets/logos/Logo-bandsite.svg"
+                    alt="logo">
+                    <p class="site-footer__bottom--text">Copyright The Bees Knees © 2021 All Rights Reserved</p>
+                </section>
         </div>
     </footer>
 </body>
