--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         src="./assets/images/band.jpg"
         alt="main photo concert">
     <section class="main-content__about">
-        <p>“We push each other to be the best. It's not uncommon for one of us to say 'this needs to be better, back to the drawing board'” - Bryan Teddy, lead vocalist of The Bees Knees</p>
+        <p>“We push each other to be the best. It's not uncommon for one of us to say 'this needs to be better, back to the drawing board'”</p>
+        <p>- Bryan Teddy, lead vocalist of The Bees Knees</p>
     </section>
     <section class="main-content__description">
         <h3 class="main-content__description--title">The Bees Knees</h3>
