--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         class="main-content__photo"
         src="./assets/images/band.jpg"
         alt="main photo concert">
-    <section class="main-content__about">
+    <article class="main-content__about">
         <p>“We push each other to be the best. It's not uncommon for one of us to say 'this needs to be better, back to the drawing board'”</p>
-        <p>- Bryan Teddy, lead vocalist of The Bees Knees</p>
-    </section>
-    <section class="main-content__description">
+        <p class="main-content__about--reference">- Bryan Teddy, lead vocalist of The Bees Knees</p>
+    </article>
+    <article class="main-content__description">
         <h3 class="main-content__description--title">The Bees Knees</h3>
         <div class="main-content__description-container">
         <p class="main-content__description--paragraph">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts (The Elephant In The Room, One Trick Pony, The Cat's Meow), Adams was confident the band could succeed even further, pushing them to sign with Magenta Records.</p>
         <p class="main-content__description--paragraph">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band's original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released in late 2021.</p>
         </div>
-    </section>
+    </article>
     <section class="main-content__gallery">
         <h2 class="main-content__gallery--title">Photo Gallery</h2>
         <div class="gallery-section">
@@ -101,18 +101,24 @@
             </section>
             <section class="site-footer__contact-container">
                 <div class="site-footer__contact">
-                    <p class="site-footer__contact--name-position">Cam Adams <br> The Bees Knees Management</p>
-                    <p class="site-footer__contact--destination">503 Broadway Penthouse, <br> New York, NY 10012, USA</p>
+                    <h4 class="site-footer__contact--name">Cam Adams</h4>
+                    <p class="site-footer__contact--position">Bees Knees Management</p>
+                    <p class="site-footer__contact--destination">503 Broadway Penthouse,</p> 
+                    <p>New York, NY 10012, USA</p>
                     <p class="site-footer__contact--email">info@thebeesknees.com</p>
                 </div>
                 <div class="site-footer__contact">
-                    <p class="site-footer__contact--name-position">Pearl Gregg <br> Limitless Artist Group</p>
-                    <p class="site-footer__contact--destination">Booking Agent for <br> US / South America / Japan</p>
+                    <h4 class="site-footer__contact--name">Pearl Gregg</h4>
+                    <p class="site-footer__contact--position">Limitless Artist Group</p>
+                    <p class="site-footer__contact--destination">Booking Agent for</p> 
+                    <p>US / South America / Japan</p>
                     <p class="site-footer__contact--email">pearl.gregg@limitlessag.com</p>
                 </div>
                 <div class="site-footer__contact">
-                    <p class="site-footer__contact--name-position">Carson Whyte <br> ARCH Entertainment</p>
-                    <p class="site-footer__contact--destination">Booking Agent for <br> UK / EU / AU</p>
+                    <h4 class="site-footer__contact--name">Carson Whyte</h4>
+                    <p class="site-footer__contact--position">ARCH Entertainment</p>
+                    <p class="site-footer__contact--destination">Booking Agent for </p> 
+                    <p>UK / EU / AU</p>
                     <p class="site-footer__contact--email">cwhyte@archentertainment.com</p>
                 </div>
             </section>
