added better paddings and font sizes for a desktop version

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header class="site-header">
-        <img  class="site-header__logo"
-        src="assets/logos/Logo-bandsite.svg"
-        alt="logo">
+        <a href="index.html">
+            <img class="site-header__logo"
+            src="assets/logos/Logo-bandsite.svg"
+            alt="logo">
+        </a>
         <nav class="site-header__nav">
             <ul class="site-header__list">
                 <li class="site-header__item--highlight">
@@ -123,9 +125,11 @@
                 </div>
             </section>
                 <section class="site-footer__bottom">
-                    <img  class="site-footer__bottom--logo"
-                    src="assets/logos/Logo-bandsite.svg"
-                    alt="logo">
+                    <a href="index.html">
+                        <img class="site-footer__bottom--logo"
+                        src="assets/logos/Logo-bandsite.svg"
+                        alt="logo">
+                    </a>
                     <p class="site-footer__bottom--text">Copyright The Bees Knees © 2021 All Rights Reserved</p>
                 </section>
         </div>
