added diving deeper requirements(hover effects and mailto links)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="site-header">
-        <a href="index.html">
+        <a class="site-header__logo" href="index.html">
             <img class="site-header__logo"
             src="assets/logos/Logo-bandsite.svg"
             alt="logo">
@@ -107,21 +107,21 @@
                     <p class="site-footer__contact--position">Bees Knees Management</p>
                     <p class="site-footer__contact--destination">503 Broadway Penthouse,</p> 
                     <p>New York, NY 10012, USA</p>
-                    <p class="site-footer__contact--email">info@thebeesknees.com</p>
+                    <a class="site-footer__contact--email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
                 </div>
                 <div class="site-footer__contact">
                     <h4 class="site-footer__contact--name">Pearl Gregg</h4>
                     <p class="site-footer__contact--position">Limitless Artist Group</p>
                     <p class="site-footer__contact--destination">Booking Agent for</p> 
                     <p>US / South America / Japan</p>
-                    <p class="site-footer__contact--email">pearl.gregg@limitlessag.com</p>
+                    <a class="site-footer__contact--email" href="mailto:pearl.gregg@limitlessag.com">pearl.gregg@limitlessag.com</a>
                 </div>
                 <div class="site-footer__contact">
                     <h4 class="site-footer__contact--name">Carson Whyte</h4>
                     <p class="site-footer__contact--position">ARCH Entertainment</p>
                     <p class="site-footer__contact--destination">Booking Agent for </p> 
                     <p>UK / EU / AU</p>
-                    <p class="site-footer__contact--email">cwhyte@archentertainment.com</p>
+                    <a class="site-footer__contact--email" href="mailto:cwhyte@archentertainment.com">cwhyte@archentertainment.com</a>
                 </div>
             </section>
                 <section class="site-footer__bottom">
