--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         class="main-content__photo"
         src="./assets/images/band.jpg"
         alt="main photo concert">
-    <article class="main-content__about">
+    <div class="main-content__about">
         <p>“We push each other to be the best. It's not uncommon for one of us to say 'this needs to be better, back to the drawing board'”</p>
         <p class="main-content__about--reference">- Bryan Teddy, lead vocalist of The Bees Knees</p>
-    </article>
+    </div>
     <article class="main-content__description">
         <h3 class="main-content__description--title">The Bees Knees</h3>
         <div class="main-content__description-container">
@@ -45,7 +45,7 @@
         <p class="main-content__description--paragraph">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band's original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released in late 2021.</p>
         </div>
     </article>
-    <section class="main-content__gallery">
+    <article class="main-content__gallery">
         <h2 class="main-content__gallery--title">Photo Gallery</h2>
         <div class="gallery-section">
             <img
@@ -85,7 +85,7 @@
             src="./assets/images/Photo-gallery-9.jpg"
             alt="music concert">
         </div>
-    </section>
+    </article>
     </main>
     <footer class="site-footer">
         <div class="site-footer__wrapper">
@@ -124,14 +124,14 @@
                     <a class="site-footer__contact--email" href="mailto:cwhyte@archentertainment.com">cwhyte@archentertainment.com</a>
                 </div>
             </section>
-                <section class="site-footer__bottom">
+                <div class="site-footer__bottom">
                     <a href="index.html">
                         <img class="site-footer__bottom--logo"
                         src="assets/logos/Logo-bandsite.svg"
                         alt="logo">
                     </a>
                     <p class="site-footer__bottom--text">Copyright The Bees Knees © 2021 All Rights Reserved</p>
-                </section>
+                </div>
         </div>
     </footer>
 </body>
