--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="site-header">
-        <a class="site-header__logo" href="index.html">
+        <a class="site-header__logo" href="index.html"> <!--logo link to a bio page-->
             <img class="site-header__logo"
             src="assets/logos/Logo-bandsite.svg"
             alt="logo">
@@ -107,7 +107,7 @@
                     <p class="site-footer__contact--position">Bees Knees Management</p>
                     <p class="site-footer__contact--destination">503 Broadway Penthouse,</p> 
                     <p>New York, NY 10012, USA</p>
-                    <a class="site-footer__contact--email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
+                    <a class="site-footer__contact--email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a> <!--mail link to an actual mail-->
                 </div>
                 <div class="site-footer__contact">
                     <h4 class="site-footer__contact--name">Pearl Gregg</h4>
