--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav class="site-header__nav">
             <ul class="site-header__list">
                 <li class="site-header__item--highlight">
-                    <a href="#" class="site-header__link--highlight">Biography</a>
+                    <a href="index.html" class="site-header__link--highlight">Biography</a>
                 </li>
                 <li class="site-header__item">
-                    <a href="#" class="site-header__link">Shows</a>
+                    <a href="pages/shows.html" class="site-header__link">Shows</a>
                 </li>
             </ul>
         </nav>
