added DOM for the Shows page mobile version

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </a>
         <nav class="site-header__nav">
             <ul class="site-header__list">
-                <li class="site-header__item--highlight">
+                <li class="site-header__item site-header__item--highlight">
                     <a href="index.html" class="site-header__link--highlight">Biography</a>
                 </li>
                 <li class="site-header__item">
