--- a/pages/shows.html
+++ b/pages/shows.html
@@ -19,7 +19,7 @@
                 <li class="site-header__item">
                     <a href="../index.html" class="site-header__link">Biography</a>
                 </li>
-                <li class="site-header__item--highlight">
+                <li class="site-header__item site-header__item--highlight">
                     <a href="shows.html" class="site-header__link--highlight">Shows</a>
                 </li>
             </ul>
@@ -43,6 +43,21 @@
     </section>
     <main class="main-content">
         <h2 class="main-content__title">Shows</h2>
+        <section class="main-content__concerts-box">
+            <ul class="main-content__concerts-tablet">
+                <li class="main-content__concerts-tablet--subtitle">date</li>
+                <li class="main-content__concerts-tablet--subtitle">venue</li>
+                <li class="main-content__concerts-tablet--subtitle">location</li>
+            </ul>
+            <ul class="main-content__concerts"></ul> 
+                <!-- <li class="main-content__subtitle">date</li> NEED MORE LISTS 
+                <li class="main-content__date">Mon Sept 06 2021</li>
+                <li class="main-content__subtitle">venue</li>
+                <li class="main-content__venue">Ronald Lane</li>
+                <li class="main-content__subtitle">location</li>
+                <li class="main-content__location">San Francisco, CA</li>
+                <a class="main-content__button" href="#">buy tickets</a> -->
+        </section>
     </main>
 
     <footer class="site-footer">
