--- a/index.html
+++ b/index.html
@@ -86,6 +86,26 @@
             alt="music concert">
         </div>
     </article>
+    <article class="comment-box">
+        <h2 class="comment-box__title"> Join the Conversation</h2>
+        <!--
+        <form class="comment-box__form">
+            <img class="comment-box__avatar" 
+            src="assets/images/Mohan-muruge.jpg"
+            alt="avatar">
+            <div class="comment-box__wrapper">
+            <label for="">name</label>
+            <input type="text" name="username" placeholder="Enter your name" /> --noteTitle
+            <label for="">comment</label>
+            <textarea name="comment" placeholder="Add a new comment"></textarea> --noteContent
+            <button class="comment-box__button" type="submit">comment</button>
+            </div>
+            </form>
+          -->
+          <!-- dynamic content will be appended to the <ul> -->
+          <ul class="comment-box__list"></ul>
+
+    </article>
     </main>
     <footer class="site-footer">
         <div class="site-footer__wrapper">
@@ -134,5 +154,6 @@
                 </div>
         </div>
     </footer>
+    <script src="scripts/index-page.js"></script>
 </body>
 </html>
