--- a/pages/shows.html
+++ b/pages/shows.html
@@ -49,7 +49,9 @@
                 <li class="main-content__concerts-tablet--subtitle">venue</li>
                 <li class="main-content__concerts-tablet--subtitle">location</li>
             </ul>
-            <ul class="main-content__concerts"></ul> 
+            <div class="main-content__wrapper">
+                <ul class="main-content__concerts"></ul> 
+            </div>
                 <!-- <li class="main-content__subtitle">date</li> NEED MORE LISTS 
                 <li class="main-content__date">Mon Sept 06 2021</li>
                 <li class="main-content__subtitle">venue</li>
