added DOM for default comments

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           -->
           <!-- dynamic content will be appended to the <ul> -->
           <ul class="comment-box__list"></ul>
+          <div class="comment-box__default"></div>
 
     </article>
     </main>
