added styling yo dynamic comment, added better structure for shows page

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </form>
           -->
           <!-- dynamic content will be appended to the <ul> -->
-          <ul class="comment-box__list"></ul>
+          <div class="comment-box__dynamic"></div>
           <div class="comment-box__default"></div>
 
     </article>
