finished responsive design for both pages

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -46,7 +46,7 @@
         <section class="main-content__concerts-box">
             <ul class="main-content__concerts-tablet">
                 <li class="main-content__concerts-tablet--subtitle">date</li>
-                <li class="main-content__concerts-tablet--subtitle">venue</li>
+                <li class="main-content__concerts-tablet--subtitle"><span class="main-content__concerts-tablet--subtitle-venue">venue</span></li>
                 <li class="main-content__concerts-tablet--subtitle">location</li>
             </ul>
         </section>
