--- a/index.html
+++ b/index.html
@@ -51,58 +51,43 @@
             <img
             class="gallery-section__photo"
             src="./assets/images/Photo-gallery-1.jpg"
-            alt="music concert">
+            alt="music concert photo">
             <img
             class="gallery-section__photo"
             src="./assets/images/Photo-gallery-2.jpg"
-            alt="music concert">
+            alt="music concert photo">
             <img
             class="gallery-section__photo"
             src="./assets/images/Photo-gallery-3.jpg"
-            alt="music concert">
+            alt="music concert photo">
             <img
             class="gallery-section__photo"
             src="./assets/images/Photo-gallery-4.jpg"
-            alt="music concert">
+            alt="music concert photo">
             <img
             class="gallery-section__photo"
             src="./assets/images/Photo-gallery-5.jpg"
-            alt="music concert">
+            alt="music concert photo">
             <img
             class="gallery-section__photo"
             src="./assets/images/Photo-gallery-6.jpg"
-            alt="music concert">
+            alt="music concert photo">
             <img
             class="gallery-section__photo"
             src="./assets/images/Photo-gallery-7.jpg"
-            alt="music concert">
+            alt="music concert photo">
             <img
             class="gallery-section__photo"
             src="./assets/images/Photo-gallery-8.jpg"
-            alt="music concert">
+            alt="music concert photo">
             <img
             class="gallery-section__photo"
             src="./assets/images/Photo-gallery-9.jpg"
-            alt="music concert">
+            alt="music concert photo">
         </div>
     </article>
     <article class="comment-box">
         <h2 class="comment-box__title"> Join the Conversation</h2>
-        <!--
-        <form class="comment-box__form">
-            <img class="comment-box__avatar" 
-            src="assets/images/Mohan-muruge.jpg"
-            alt="avatar">
-            <div class="comment-box__wrapper">
-            <label for="">name</label>
-            <input type="text" name="username" placeholder="Enter your name" /> --noteTitle
-            <label for="">comment</label>
-            <textarea name="comment" placeholder="Add a new comment"></textarea> --noteContent
-            <button class="comment-box__button" type="submit">comment</button>
-            </div>
-            </form>
-          -->
-          <!-- dynamic content will be appended to the <ul> -->
           <div class="comment-box__dynamic"></div>
           <div class="comment-box__default"></div>
 
@@ -114,13 +99,13 @@
                 <h2 class="site-footer__top--title">Get in Touch</h2>
                 <img  class="site-footer__top--svg"
                 src="assets/icons/Icon-instagram.svg"
-                alt="instagram">
+                alt="instagram link">
                 <img  class="site-footer__top--svg"
                 src="assets/icons/Icon-facebook.svg"
-                alt="facebook">
+                alt="facebook link">
                 <img  class="site-footer__top--svg"
                 src="assets/icons/Icon-twitter.svg"
-                alt="twitter">
+                alt="twitter link">
             </section>
             <section class="site-footer__contact-container">
                 <div class="site-footer__contact">
