fixed styles and added condition statement for the blank form

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -42,7 +42,7 @@
         <ul class="main-content__concerts-tablet"> <!--Hidden list, that appears only on tablet version for better structure, Jim said it is ok to have mobile titles only like that-->
             <li class="main-content__concerts-tablet--subtitle">date</li>
             <li class="main-content__concerts-tablet--subtitle"><span class="main-content__concerts-tablet--subtitle-venue">venue</span></li>
-            <li class="main-content__concerts-tablet--subtitle">location</li>
+            <li class="main-content__concerts-tablet--subtitle"><span class="main-content__concerts-tablet--subtitle-location">location</span></li>
         </ul>
         <div class="main-content__concerts-box"> <!--All DOM elements build on this section through JS-->
         </div>
